fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,17 @@ body {
   padding: 19px 5px 11px 34px;
 }
 
+.a h1 {
+  margin-top: 10px;
+}
+
+.b {
+  margin-top: 20px !important;
+  padding: 0 !important;
+}
+
+
+
 .paragraph1 {
   font-family: Open Sans;
   font-style: normal;
@@ -200,7 +211,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 70px;
   justify-content: center;
   text-align: center;
 }
@@ -238,17 +248,13 @@ body {
 
 .content img {
   margin-bottom: 20px;
-  margin-left: -29px;
+  margin: 0 auto;
   cursor: pointer;
   transition: 300ms;
 }
 
 .content img:hover {
   transform: scale(1.1, 1.1);
-}
-
-.content p {
-  margin-left: -150px;
 }
 
 /* footer */
@@ -365,8 +371,8 @@ footer {
     margin-left: 0px;
   }
 
-  .content p {
-    margin-left: -60px;
+  .slick-slide img {
+    display: inline !important;
   }
 
   /* footer */
@@ -394,19 +400,11 @@ footer {
     font-size: 15px;
   }
 
-  .paragraph1 {
-    font-size: 11px;
-  }
-
   .footer-content2 h1 {
     font-size: 11px;
   }
 
   .footer-p {
     font-size: 11px;
-  }
-
-  .content p {
-    margin-left: -100px;
   }
 }
